# PerpDEX-Dashboard-Data-Hub

./: .env.example  .gitignore  README.md  perpdex.cmd  pyproject.toml
config/: markets.json
docs/: MIGRATION_PLAN.md  START_PROMPT.md  storage-strategy.md  verification.md
scripts/: archive-monthly.ps1  live-30s-test-loop.ps1  live-test-loop.ps1  pm2-collector.config.cjs  scan_secrets.py  telegram-monitor.ps1  verify.ps1
src/perpdex_bot/: __init__.py  archive.py  calculations.py  cli.py  collectors.py  config.py  control.py  dashboard.py  db.py  exchanges.py  hibachi.py  hotstuff.py  hyperliquid.py  lighter.py  mock_data.py  models.py  pacifica.py  repositories.py  rise.py  telegram_monitor.py
tests/: test_archive.py  test_calculations.py  test_hibachi_collector.py  test_hotstuff_collector.py  test_hyperliquid_collector.py  test_lighter_collector.py  test_orderbook_notional_depth.py  test_pacifica_collector.py  test_phase2b_collector_status.py  test_phase2c_overview.py  test_rise_collector.py  test_risex_collector.py  test_telegram_monitor.py
